--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Durante le lezioni di laboratorio, è essenziale che ci sia un ambiente tranquillo e produttivo per tutti. Il rispetto reciproco è fondamentale per permettere a ciascuno di concentrarsi e svolgere al meglio le attività assegnate.</p>
         <p>Vi chiedo quindi di prestare maggiore attenzione al comportamento collettivo e di ridurre al minimo le distrazioni. Un buon ambiente di studio è fondamentale per il nostro successo.</p>
         <p>Confido nel vostro impegno e nella vostra collaborazione. Grazie.</p>
-        <p>Cordiali saluti,<br>Prof. [Tuo Nome]</p>
+        <p>Cordiali saluti,<br>Prof. Hu</p>
     </div>
 
     <button onclick="evidenzia()">Evidenzia le parti importanti</button>
